fix for mobile rendering issue - the chessboards buttons are pushing the countdown off screen

--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ h4 {
 }
 
 .chess-button-row button{
-  font-size: 36px;
+  font-size: 20pt;
 }
 
 
